Improve overall coding/naming style
Remove unnecessary variables

Avoid shortcut identifiers and underscores

Rename YangProvides -> Yang

Use @Nonnull/@Nullable more consistently

Try to avoid using generic classes w/o type parameters

Use @SuppressWarnings "UnstableApiUsage",
"MismatchedQueryAndUpdateOfCollection", "unused",
"GroovyUnusedDeclaration" (and a few "unchecked" for cases where check
would be redundant)

Use maximal line length of 130 (132 - 1 for diff - 1 for scroll)