@@ -7,10 +7,10 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.io.Reader;
 import java.nio.charset.Charset;
-import static java.nio.charset.StandardCharsets.UTF_8;
+import java.nio.charset.StandardCharsets;
+import java.util.Set;
 
 import javax.annotation.Nonnull;
-
 import javax.xml.stream.XMLInputFactory;
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamReader;
@@ -26,110 +26,86 @@ import org.opendaylight.netconf.test.tool.config.ConfigurationBuilder;
 
 public final class NetEmu extends NetconfDeviceSimulator {
 
+    @Nonnull
     private static final Logger LOG = LoggerFactory.getLogger(NetEmu.class);
 
-    private static final XMLInputFactory XML_INPUT_FACTORY =
-            XMLInputFactory.newInstance();
+    @Nonnull
+    private static final XMLInputFactory XML_INPUT_FACTORY = XMLInputFactory.newInstance();
 
     @Nonnull
-    private final YangPool _pool;
+    private final YangPool pool;
 
     @Nonnull
     public YangPool getYangPool() {
-        return this._pool;
+        return this.pool;
     }
 
     public NetEmu(@Nonnull final YangPool pool) {
         super(new ConfigurationBuilder()
-                .setCapabilities(ImmutableSet.of(
-                        "urn:ietf:params:netconf:base:1.0",
-                        "urn:ietf:params:netconf:base:1.1"))
-
-                .setModels(ImmutableSet.copyOf(pool.getModules()))
+                .setCapabilities(ImmutableSet.of("urn:ietf:params:netconf:base:1.0", "urn:ietf:params:netconf:base:1.1"))
+                .setModels(Set.copyOf(pool.getModules()))
                 .setRpcMapping(new NetconfRequest(pool))
                 .build());
 
-        this._pool = pool;
+        this.pool = pool;
     }
 
     public void loadConfigurationFromXml(@Nonnull final Reader reader) {
-        final XMLStreamReader xmlReader;
+        @Nonnull final XMLStreamReader xmlReader;
         try {
             xmlReader = XML_INPUT_FACTORY.createXMLStreamReader(reader);
 
-        } catch (XMLStreamException e) {
-            LOG.error("Cannot use reader for loading XML Configuration: "
-                    + reader);
-
-            e.printStackTrace();
-            LOG.error("Failed reading XML Configuration from: " + reader);
+        } catch (final XMLStreamException e) {
+            LOG.error("While loading XML Configuration: ", e);
+            LOG.error("Failed reading XML Configuration from: {}", reader);
             return;
         }
 
-        this._pool.writeConfigurationDataFrom(xmlReader);
+        this.pool.writeConfigurationDataFrom(xmlReader);
     }
 
-    public void loadConfigurationFromXml(
-            @Nonnull final File file, @Nonnull final Charset encoding) {
-
-        final XMLStreamReader xmlReader;
+    public void loadConfigurationFromXml(@Nonnull final File file, @Nonnull final Charset encoding) {
+        @Nonnull final XMLStreamReader xmlReader;
         try {
-            xmlReader = XML_INPUT_FACTORY.createXMLStreamReader(
-                    new FileReader(file, encoding));
+            xmlReader = XML_INPUT_FACTORY.createXMLStreamReader(new FileReader(file, encoding));
 
-        } catch (final
-                IOException |
-                XMLStreamException e) {
-
-            LOG.error("Cannot open file for loading XML Configuration: "
-                    + file);
-
-            e.printStackTrace();
-            LOG.error("Failed reading XML Configuration from: " + file);
+        } catch (final IOException | XMLStreamException e) {
+            LOG.error("While opening file for loading XML Configuration: ", e);
+            LOG.error("Failed reading XML Configuration from: {}", file);
             return;
         }
 
-        this._pool.writeConfigurationDataFrom(xmlReader);
+        this.pool.writeConfigurationDataFrom(xmlReader);
     }
 
     public void loadConfigurationFromXml(@Nonnull final File file) {
-        this.loadConfigurationFromXml(file, UTF_8);
+        this.loadConfigurationFromXml(file, StandardCharsets.UTF_8);
     }
 
     public void loadConfigurationFromXml() {
-        this.loadConfigurationFromXml(
-                new File("configuration.xml").getAbsoluteFile());
+        this.loadConfigurationFromXml(new File("configuration.xml").getAbsoluteFile());
     }
 
-    public void applyOperationalDataFromXml(
-            @Nonnull final File file, @Nonnull final Charset encoding) {
+    public void applyOperationalDataFromXml(@Nonnull final File file, @Nonnull final Charset encoding) {
 
-        final XMLStreamReader xmlReader;
+        @Nonnull final XMLStreamReader xmlReader;
         try {
-            xmlReader = XML_INPUT_FACTORY.createXMLStreamReader(
-                    new FileReader(file, encoding));
+            xmlReader = XML_INPUT_FACTORY.createXMLStreamReader(new FileReader(file, encoding));
 
-        } catch (final
-                IOException |
-                XMLStreamException e) {
-
-            LOG.error("Cannot open file for loading Operational XML Data: "
-                    + file);
-
-            e.printStackTrace();
-            LOG.error("Failed reading Operational XML Data from: " + file);
+        } catch (final IOException | XMLStreamException e) {
+            LOG.error("While opening file for loading Operational XML Data: ", e);
+            LOG.error("Failed reading Operational XML Data from: {}", file);
             return;
         }
 
-        this._pool.writeOperationalDataFrom(xmlReader);
+        this.pool.writeOperationalDataFrom(xmlReader);
     }
 
     public void applyOperationalDataFromXml(@Nonnull final File file) {
-        this.applyOperationalDataFromXml(file, UTF_8);
+        this.applyOperationalDataFromXml(file, StandardCharsets.UTF_8);
     }
 
     public void applyOperationalDataFromXml() {
-        this.applyOperationalDataFromXml(
-                new File("configuration.xml").getAbsoluteFile());
+        this.applyOperationalDataFromXml(new File("operational.xml").getAbsoluteFile());
     }
 }
